# interview-project

./: .gitignore  README.md  pyproject.toml  scratch.sql  start_local.py
server/: app.py  ex_endpoints.py  ex_query.py  ex_schema.py
